# uninuvola-init

./: .gitignore  Makefile  README.md  config.yaml  pyproject.toml  uninuvola.sh
.github/workflows/: lint.yml
docs/: index.md
uninuvola_init/: __main__.py  cli.py
uninuvola_init/args/: __init__.py
uninuvola_init/config_parser/: __init__.py
uninuvola_init/configs/: __init__.py
uninuvola_init/logger/: __init__.py
uninuvola_init/openLDAP/: __init__.py  api.py
uninuvola_init/vault/: __init__.py  api.py
