[tool.poetry]
name = "uninuvola-init"
version = "0.1.0"
description = "Kickstarter script for all uninuvola's software"
authors = ["Nicolò Vescera <nicolo.vescera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
hvac = "^2.3.0"
pyyaml = "^6.0.2"
ldap3 = "^2.9.1"

[tool.poetry.scripts]
uninuvola-init = "uninuvola_init.cli:main"

[tool.poetry.group.docs.dependencies]
pylint = "^3.2.6"
pyment = "^0.3.3"
pydoc-markdown = "^4.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
